feat: criando regras para modulagem
